--- a/frentend/src/App.css
+++ b/frentend/src/App.css
@@ -46,3 +46,12 @@ display: flex;
   justify-content: center;
   align-items: center;
 }
+
+table {
+  width: 90%;
+}
+
+td{
+  border: solid 2px red;
+
+}
